PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Result parser improvements
pts-core: Add AppendToArgumentsDescription option to result parser capabilities

Phoronix Test Suite 7.0.1
28 March 2017

pts-core: Support for network proxies with username/password requirement
pts-core: Improve formatting of text in 'info' sub-command
phodevi: Improved detection for Quill AArch64 board and possibly other boards
phodevi: Various sensor detection improvements for the Jetson TX2
phodevi: Add fallback detection for ARM Mali
report_test_run_times: Add INSTALL_TIMES_ARE_A_BENCHMARK=1 option for generating install time graphs
report_test_run_times: Add INSTALL_SIZES_ARE_A_BENCHMARK=1 option for generating install size graphs

Phoronix Test Suite 7.0.0-Ringsaker
6 March 2017

pts-core: Make the AppStream meta data happy
pts-core: Improve formatting of PDF generation on large result files
phodevi: Expand GCC version detection when -dumpversion isn't supported (e.g. gcc-snapshot of gcc 7.0.1)

Phoronix Test Suite 7.0.0 Milestone 5
28 February 2017

pts-core: Allow bzip2 compression of result file uploads to OpenBenchmarking.org
pts-core: Only preserve the original raw result string if it differs from the final result
pts-core: Show results in text mode when show-result sub-command is run without DISPLAY
report_test_run_times: new module to report test run times as result graphs

Phoronix Test Suite 7.0.0 Milestone 4
16 February 2017

pts-core: stress-run styling improvements
pts-core: External dependency XML updates
phodevi: Continued tweaking on the new system information view
phodevi: Append LLVM version to OpenGL driver string where relevant
pts_Graph: Continued tweaking of graph UI
pts_Graph: Allow more compact multi-way comparison graphs
pts_Graph: Various SVG size/efficiency optimizations

Phoronix Test Suite 7.0.0 Milestone 3
7 February 2017

pts-core: Add winners-and-losers sub-command for providing some first/last place finish stats